hphp/hack/test/typecheck/ffp/function_public_bad.php.exp
File "function_public_bad.php", line 4, characters 7-11:
Top-level functions cannot be declared public (Parsing[1002])
